--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p class="sub-title">Airline Management 2025</p>
     </div>
 
-    <a href="#" class="play-button">Play Now!</a>
+    <a href="account.html" class="play-button">Play Now!</a>
 
     <div class="follow-section">
         Follow us on <a href="https://www.instagram.com/lonely_.707" target="_blank" class="instagram-link"><i class="fab fa-instagram"></i> lonely_.707</a>
