--- a/account.html
+++ b/account.html
@@ -26,6 +26,7 @@
             </div>
             <button type="submit" disabled>Register</button>
         </form>
+        <p>Already have an account? <a href="#">Login</a></p>
         <p><a href="index.html">Go back to the main page</a></p>
     </div>
 
@@ -54,4 +55,3 @@
     </script>
 </body>
 </html>
-
