--- a/account.html
+++ b/account.html
@@ -26,7 +26,7 @@
             </div>
             <button type="submit" disabled>Register</button>
         </form>
-        <p>Already have an account? <a href="#">Login</a></p>
+        <p>Already have an account? <a href="Login.html">Login</a></p>
         <p><a href="index.html">Go back to the main page</a></p>
     </div>
 
