--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
+  authDomain: "airline-management-2025.firebaseapp.com",
+  projectId: "airline-management-2025",
+  storageBucket: "airline-management-2025.firebasestorage.app",
+  messagingSenderId: "79795767586",
+  appId: "1:79795767586:web:657c354561e587f56bbd7b",
+  measurementId: "G-8QPTWZ1WYC"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airline Management 2025</title>
@@ -67,6 +88,27 @@
         }
     </style>
 </head>
+    // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
+  authDomain: "airline-management-2025.firebaseapp.com",
+  projectId: "airline-management-2025",
+  storageBucket: "airline-management-2025.firebasestorage.app",
+  messagingSenderId: "79795767586",
+  appId: "1:79795767586:web:657c354561e587f56bbd7b",
+  measurementId: "G-8QPTWZ1WYC"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 <body>
     <div class="title-section">
         <h1>Build your Fleet and Become rich!!</h1>
