--- a/account.html
+++ b/account.html
@@ -1,87 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
-  authDomain: "airline-management-2025.firebaseapp.com",
-  projectId: "airline-management-2025",
-  storageBucket: "airline-management-2025.firebasestorage.app",
-  messagingSenderId: "79795767586",
-  appId: "1:79795767586:web:657c354561e587f56bbd7b",
-  measurementId: "G-8QPTWZ1WYC"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Airline Management 2025</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
-  authDomain: "airline-management-2025.firebaseapp.com",
-  projectId: "airline-management-2025",
-  storageBucket: "airline-management-2025.firebasestorage.app",
-  messagingSenderId: "79795767586",
-  appId: "1:79795767586:web:657c354561e587f56bbd7b",
-  measurementId: "G-8QPTWZ1WYC"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-<body>
-    <div class="account-container">
-        <h1>Register your account</h1>
-        <form id="register-form">
-            <div class="input-group">
-                <label for="register-email">Email:</label>
-                <input type="email" id="register-email" name="register-email" required>
-            </div>
-            <div class="input-group">
-                <label for="register-password">Password:</label>
-                <input type="password" id="register-password" name="register-password" required>
-            </div>
-            <div class="input-group">
-                <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
-                <p id="password-match" style="color: green; display: none;">Passwords match!</p>
-                <p id="password-mismatch" style="color: red; display: none;">Passwords do not match!</p>
-            </div>
-            <button type="submit" disabled>Register</button>
-        </form>
-        <p>Already have an account? <a href="Login.html">Login</a></p>
-        <p><a href="index.html">Go back to the main page</a></p>
-    </div>
-
     <script>
-        // Basic password matching for registration (client-side only)
-        const registerPassword = document.getElementById('register-password');
-        const confirmPassword = document.getElementById('confirm-password');
+        // Get Firebase auth instance
+        const auth = firebase.auth();
+
+        // Get form elements
+        const registerForm = document.getElementById('register-form');
+        const emailInput = document.getElementById('register-email');
+        const passwordInput = document.getElementById('register-password');
+        const confirmPasswordInput = document.getElementById('confirm-password');
         const passwordMatch = document.getElementById('password-match');
         const passwordMismatch = document.getElementById('password-mismatch');
         const registerButton = document.querySelector('#register-form button[type="submit"]');
 
         function checkPassword() {
-            if (registerPassword.value === confirmPassword.value) {
+            if (passwordInput.value === confirmPasswordInput.value) {
                 passwordMatch.style.display = 'block';
                 passwordMismatch.style.display = 'none';
                 registerButton.disabled = false;
@@ -92,8 +23,30 @@ const analytics = getAnalytics(app);
             }
         }
 
-        registerPassword.addEventListener('keyup', checkPassword);
-        confirmPassword.addEventListener('keyup', checkPassword);
+        async function registerUser(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            const email = emailInput.value;
+            const password = passwordInput.value;
+
+            try {
+                const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+                const user = userCredential.user;
+                console.log('Registration successful!', user);
+                // Optionally, redirect the user to the game page or a success message
+                window.location.href = 'index.html'; // Redirect to the main game page after registration
+                // You might want to store additional user data in Firestore here later
+            } catch (error) {
+                console.error('Registration failed:', error.message);
+                // Display an error message to the user
+                alert('Registration failed: ' + error.message);
+            }
+        }
+
+        passwordInput.addEventListener('keyup', checkPassword);
+        confirmPasswordInput.addEventListener('keyup', checkPassword);
+        registerForm.addEventListener('submit', registerUser);
+
+        // Initially disable the register button
+        registerButton.disabled = true;
     </script>
-</body>
-</html>
