--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
-  authDomain: "airline-management-2025.firebaseapp.com",
-  projectId: "airline-management-2025",
-  storageBucket: "airline-management-2025.firebasestorage.app",
-  messagingSenderId: "79795767586",
-  appId: "1:79795767586:web:657c354561e587f56bbd7b",
-  measurementId: "G-8QPTWZ1WYC"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airline Management 2025</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
+    <script>
+      const firebaseConfig = {
+        apiKey: "YOUR_API_KEY",
+        authDomain: "airline-management-2025.firebaseapp.com",
+        projectId: "airline-management-2025",
+        storageBucket: "airline-management-2025.firebasestorage.app",
+        messagingSenderId: "79795767586",
+        appId: "1:79795767586:web:657c354561e587f56bbd7b",
+        measurementId: "G-8QPTWZ1WYC"
+      };
+
+      // Initialize Firebase
+      const app = firebase.initializeApp(firebaseConfig);
+      const auth = firebase.auth();
+      const db = firebase.firestore();
+    </script>
     <style>
         body {
             font-family: sans-serif;
@@ -88,27 +86,6 @@ const analytics = getAnalytics(app);
         }
     </style>
 </head>
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
-  authDomain: "airline-management-2025.firebaseapp.com",
-  projectId: "airline-management-2025",
-  storageBucket: "airline-management-2025.firebasestorage.app",
-  messagingSenderId: "79795767586",
-  appId: "1:79795767586:web:657c354561e587f56bbd7b",
-  measurementId: "G-8QPTWZ1WYC"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
 <body>
     <div class="title-section">
         <h1>Build your Fleet and Become rich!!</h1>
