--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
                 const user = userCredential.user;
                 console.log('Login successful!', user);
                 // Redirect to the main game page
-                window.location.href = 'index.html';
+                window.location.href = 'login_success.html';
                 // Here you would also load the user's saved game data from Firestore
             } catch (error) {
                 console.error('Login failed:', error.message);
