--- a/login_success.html
+++ b/login_success.html
@@ -10,7 +10,7 @@
     <p>Welcome to Airline Management 2025!</p>
 
     <h2>World Map</h2>
-    <img src="images/world_map.jpg" alt="World Map" style="width: 100%; max-width: 800px; height: auto; border: 1px solid #ccc;">
+    <img src="images/Map.jpg" alt="World Map" style="width: 100%; max-width: 800px; height: auto; border: 1px solid #ccc;">
 
     <p><a href="index.html">Go to the main page</a> (This will eventually be your game)</p>
 </body>
