--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
     <script>
       const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
+        apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
         authDomain: "airline-management-2025.firebaseapp.com",
         projectId: "airline-management-2025",
         storageBucket: "airline-management-2025.firebasestorage.app",
