--- a/account.html
+++ b/account.html
@@ -92,7 +92,7 @@
                 const userCredential = await auth.createUserWithEmailAndPassword(email, password);
                 const user = userCredential.user;
                 console.log('Registration successful!', user);
-                window.location.href = 'login.html'; // Redirect after successful registration
+                window.location.href = 'index.html'; // Redirect after successful registration
             } catch (error) {
                 console.error('Registration failed:', error.message);
                 alert('Registration failed: ' + error.message);
