--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-firestore.js"></script>
     <script>
       const firebaseConfig = {
-        apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I"",
+        apiKey: "AIzaSyBXjX_FpSu-6mGvmimy7PRvwez-jloj05I",
         authDomain: "airline-management-2025.firebaseapp.com",
         projectId: "airline-management-2025",
         storageBucket: "airline-management-2025.firebasestorage.app",
@@ -49,10 +49,7 @@
     </div>
 
     <script>
-        // Get Firebase auth instance
         const auth = firebase.auth();
-
-        // Get form elements
         const registerForm = document.getElementById('register-form');
         const emailInput = document.getElementById('register-email');
         const passwordInput = document.getElementById('register-password');
@@ -60,8 +57,7 @@
         const passwordMatch = document.getElementById('password-match');
         const passwordMismatch = document.getElementById('password-mismatch');
         const registerButton = document.querySelector('#register-form button[type="submit"]');
-
-        let passwordsAreMatching = false; // Flag to track password match
+        let passwordsAreMatching = false;
 
         function checkPassword() {
             if (passwordInput.value === confirmPasswordInput.value) {
@@ -78,27 +74,19 @@
         }
 
         async function registerUser(event) {
-            event.preventDefault(); // Prevent the default form submission
-
+            event.preventDefault();
             if (!passwordsAreMatching) {
                 alert('Passwords do not match. Please ensure they are the same.');
-                return; // Stop registration if passwords don't match
+                return;
             }
-
-            // Double-check if the button is still disabled for some reason
             if (registerButton.disabled) {
                 alert('The Register button is still disabled. Please ensure passwords match.');
                 return;
             }
-
-            const email = emailInput.value;
-            const password = passwordInput.value;
-
             try {
-                const userCredential = await auth.createUserWithEmailAndPassword(email, password);
-                const user = userCredential.user;
-                console.log('Registration successful!', user);
-                window.location.href = 'login.html'; // Redirect after successful registration
+                const userCredential = await auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value);
+                console.log('Registration successful!', userCredential.user);
+                window.location.href = 'login.html';
             } catch (error) {
                 console.error('Registration failed:', error.message);
                 alert('Registration failed: ' + error.message);
@@ -107,9 +95,7 @@
 
         passwordInput.addEventListener('keyup', checkPassword);
         confirmPasswordInput.addEventListener('keyup', checkPassword);
-        registerForm.addEventListener('submit', registerUser); // Listen for form submission
-
-        // Initial check in case passwords were pre-filled
+        registerForm.addEventListener('submit', registerUser);
         checkPassword();
     </script>
 </body>
