--- a/login_success.html
+++ b/login_success.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Successful</title>
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Successful</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-eYiy+arzc6Yw1oPtWGBbjzQiKnWzidRjo/6S 8LnczAKQ1h5yr2fKtS8JXWCN5lW4BvpiYhho/cnoKGTKoFZ7hk=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20vVsIW1lnCv+YU/zy5eAgWgKb13RQlZHcuyeUHuyys="
+            crossorigin=""></script>
 </head>
 <body>
     <h1>Login Successful!</h1>
