--- a/login_success.html
+++ b/login_success.html
@@ -21,7 +21,8 @@
     <p>Welcome to Airline Management 2025!</p>
 
     <h2>World Map</h2>
-    <img src="images/map.jpg" alt="World Map" style="width: 100%; max-width: 800px; height: auto; border: 1px solid #ccc;">
+    <div id="game-map" style="width: 100%; height: 500px; border: 1px solid #ccc;"></div>
 
     <p><a href="index.html">Go to the main page</a> (This will eventually be your game)</p>
 </body>
+
