--- a/login_success.html
+++ b/login_success.html
@@ -25,4 +25,13 @@
 
     <p><a href="index.html">Go to the main page</a> (This will eventually be your game)</p>
 </body>
+<script>
+  // Initialize the map
+  const map = L.map('game-map').setView([0, 0], 2); // Center at latitude 0, longitude 0, with zoom level 2
+
+  // Add a tile layer (using OpenStreetMap)
+  L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+  }).addTo(map);
+</script>
 
