--- a/login.html
+++ b/login.html
@@ -5,6 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Airline Management 2025</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh; /* Make container take at least the full viewport height */
+            padding: 20px;
+            text-align: center; /* Center text within the container */
+        }
+        .form-group {
+            margin-bottom: 15px;
+            width: 80%; /* Adjust width as needed */
+            max-width: 300px; /* Set a maximum width */
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            text-align: left;
+        }
+        .form-group input[type="email"],
+        .form-group input[type="password"] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .btn {
+            padding: 10px 20px;
+            background-color: #007bff; /* Example button color */
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .btn:hover {
+            background-color: #0056b3;
+        }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
+        .register-link {
+            margin-top: 20px;
+            font-size: 14px;
+        }
+    </style>
     <script type="module">
       // Import Firebase modules
       import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
@@ -66,7 +115,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login to Airline Management 2025</h2>
+        <h2>Get Right Back In!!</h2>
         <form id="login-form">
             <div class="form-group">
                 <label for="login-email">Email:</label>
@@ -79,6 +128,7 @@
             <button type="submit" class="btn">Login</button>
         </form>
         <p id="error-message" class="error"></p>
+        <p class="register-link">Have No Account? <a href="register.html">Register Now</a></p>
     </div>
 </body>
 </html>
