--- a/login.html
+++ b/login.html
@@ -128,7 +128,7 @@
             <button type="submit" class="btn">Login</button>
         </form>
         <p id="error-message" class="error"></p>
-        <p class="register-link">Have No Account? <a href="register.html">Register Now</a></p>
+        <p class="register-link">Have No Account? <a href="account.html">Register Now</a></p>
     </div>
 </body>
 </html>
