--- a/login_success.html
+++ b/login_success.html
@@ -3,32 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Successful</title>
+    <title>Airline Management 2025</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-          integrity="sha256-eYiy+arzc6Yw1oPtWGBbjzQiKnWzidRjo/6S 8LnczAKQ1h5yr2fKtS8JXWCN5lW4BvpiYhho/cnoKGTKoFZ7hk=="
-          crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-            integrity="sha256-20vVsIW1lnCv+YU/zy5eAgWgKb13RQlZHcuyeUHuyys="
-            crossorigin=""></script>
+    <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start; /* Align items at the top */
+            min-height: 100vh;
+            padding: 20px;
+            text-align: center;
+        }
+        .section {
+            width: 80%; /* Adjust as needed */
+            max-width: 600px; /* Limit the width */
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            padding: 15px;
+            box-sizing: border-box;
+        }
+        .map-container {
+            width: 100%;
+            height: 300px; /* Adjust map height as needed */
+            background-color: #f0f0f0; /* Placeholder for your map */
+        }
+    </style>
 </head>
 <body>
-    <h1>Login Successful!</h1>
-    <p>Welcome to Airline Management 2025!</p>
+    <div class="container">
+        <h2>Welcome to Airline Management 2025</h2>
 
-    <h2>World Map</h2>
-    <div id="game-map" style="width: 100%; height: 500px; border: 1px solid #ccc;"></div>
+        <div class="section">
+            <h3>Bank Balance:</h3>
+            <p>$ 4,000,000</p>
+        </div>
 
-    <p><a href="index.html">Go to the main page</a> (This will eventually be your game)</p>
+        <div class="section map-container">
+            <h3>Map</h3>
+            </div>
 
-    <script>
-      // Initialize the map
-      const map = L.map('game-map').setView([0, 0], 2); // Center at latitude 0, longitude 0, with zoom level 2
+        <div class="section">
+            <h3>Future stuff</h3>
+            </div>
 
-      // Add a tile layer (using OpenStreetMap)
-      L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-    </script>
+        <a href="index.html">Go to main page</a>
+    </div>
 </body>
 </html>
