--- a/login_success.html
+++ b/login_success.html
@@ -6,14 +6,41 @@
     <title>Airline Management 2025</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .container {
+        body, html {
+            height: 100%;
+            margin: 0;
+            overflow: hidden; /* Prevent scrolling of the main body */
+        }
+        .header {
+            background-color: #f0f0f0; /* Example header background */
+            color: #333;
+            padding: 10px 20px;
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
             align-items: center;
-            justify-content: flex-start; /* Align items at the top */
-            min-height: 100vh;
-            padding: 20px;
-            text-align: center;
+            position: fixed; /* Stick to the top */
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 100; /* Ensure it's above other content */
+        }
+        .account-info, .points-info {
+            display: flex;
+            gap: 10px;
+        }
+        .map-container {
+            height: calc(100% - 50px); /* Adjust height based on header height */
+            margin-top: 50px; /* Make space for the fixed header */
+            width: 100%;
+            background-color: #e0e0e0; /* Placeholder for map background */
+            display: flex;
+            justify-content: center; /* Center the image horizontally */
+            align-items: center; /* Center the image vertically */
+        }
+        .map-container img {
+            max-width: 100%; /* Ensure image doesn't exceed container width */
+            max-height: 100%; /* Ensure image doesn't exceed container height */
+            object-fit: contain; /* Preserve aspect ratio and fit within container */
         }
         .section {
             width: 80%; /* Adjust as needed */
@@ -23,29 +50,31 @@
             padding: 15px;
             box-sizing: border-box;
         }
-        .map-container {
-            width: 100%;
-            height: 300px; /* Adjust map height as needed */
-            background-color: #f0f0f0; /* Placeholder for your map */
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to Airline Management 2025</h2>
-
-        <div class="section">
-            <h3>Bank Balance:</h3>
-            <p>$ 4,000,000</p>
+        <div class="header">
+            <div class="account-info">
+                <span>ACCOUNT</span>
+                <span>$10,184,023</span>
+            </div>
+            <div class="points-info">
+                <span>POINTS</span>
+                <span>24</span>
+            </div>
+            <div>
+                <img src="settings_icon.png" alt="Settings" height="20">
+            </div>
         </div>
 
-        <div class="section map-container">
-            <h3>Map</h3>
-            </div>
+        <div class="map-container">
+            <img src="images/map.jpg" alt="World map">
+        </div>
 
         <div class="section">
             <h3>Future stuff</h3>
-            </div>
+        </div>
 
         <a href="index.html">Go to main page</a>
     </div>
